
<resources>
    <string name="app_name">Phlogging</string>
    <string name="add_entry_button">Add an entry</string>
    <string name="edit_take_photo_button">Camera</string>
    <string name="edit_select_photo_button">Gallery</string>
    <string name="edit_share_contact_button">Share Contact</string>
    <string name="edit_update_location_button">Update Location</string>
    <string name="edit_save_button">Save</string>
    <string name="share_button">Share</string>
    <string name="delete_button">Delete</string>



    <string name="edit_stop_button">stop</string>
    <string name="edit_clear_button">clear</string>

    <string name="dialog_dismiss_button">Dismiss</string>
    <string name="textview_no_title">No title yet</string>
    <string name="textview_no_description">No description yet</string>
    <string name="textview_no_information">No location information yet</string>
    <string name="textview_no_time">No time information yet</string>
    <string name="edittext_no_description">Describe it!</string>

    <string name="record_file_name">recorded.3gp</string>
    <string name="camera_file_name">IMG.JPEG</string>


</resources>