
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="@dimen/listview_textview_titletextsize"
        android:text="@string/textview_no_description"/>


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/edit_edittext_weight"
        android:textSize="@dimen/listview_textview_textsize"
        android:text="@string/textview_no_description"/>
    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/dialog_imageview_weight"
        android:layout_marginTop="@dimen/dialog_imageview_margin"
        android:layout_marginBottom="@dimen/dialog_imageview_margin"
        />


    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/listview_textview_textsize"
        android:layout_weight="@integer/edit_textview_weight"
        android:text="@string/textview_no_information"/>

    <Button
        android:id="@+id/share_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_gravity="center"
        android:text="@string/share_button"/>
    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_gravity="center"
        android:text="@string/dialog_dismiss_button"/>



</LinearLayout>