
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/listview_textview_titletextsize"/>

    <TextView
        android:id="@+id/view_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/listview_textview_textsize"/>
    <LinearLayout android:id="@+id/view_images"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_width="match_parent">
        <ImageView
            android:id="@+id/view_camera_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/view_gallery_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>


    <TextView
        android:id="@+id/view_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="@dimen/listview_textview_textsize"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/view_sensor_values"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="@dimen/listview_textview_textsize"
        android:layout_weight="1"/>

    <LinearLayout android:id="@+id/view_buttons"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/share_button"
            android:onClick="myClickHandler"/>
        <Button
            android:id="@+id/dismiss_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_dismiss_button"
            android:onClick="myClickHandler"/>
        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete_button"
            android:onClick="myClickHandler"/>
    </LinearLayout>

</LinearLayout>